--- a/index.html
+++ b/index.html
@@ -39,12 +39,41 @@
   <h2>Recurring Medical Transportation, Done Right</h2>
 
   <div class="cards">
-    <div class="card">🩺 <strong>Dialysis</strong><br>Time-sensitive treatments multiple times per week where consistency and punctuality are critical.</div>
-    <div class="card">💉 <strong>Cancer & Infusion Therapy</strong><br>Recurring oncology and infusion appointments at the same care centers over extended periods.</div>
-    <div class="card">♿ <strong>Rehabilitation & Therapy</strong><br>Physical, occupational, speech, and pulmonary therapy requiring repeat visits week after week.</div>
-    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments over multiple weeks where even small delays can disrupt care schedules.</div>
-    <div class="card">🤝 <strong>Substance Use Treatment</strong><br>Outpatient programs that depend on consistent attendance and reliable transportation routines.</div>
-    <div class="card">🏥 <strong>Post-Op Rehab</strong><br>Recovery after surgery often involves multiple weekly visits to the same rehabilitation facility.</div>
+    <div class="card">
+      🩺 <strong>Dialysis</strong><br>
+      Time-sensitive treatments multiple times per week where consistency
+      and punctuality are critical.
+    </div>
+
+    <div class="card">
+      💉 <strong>Cancer & Infusion Therapy</strong><br>
+      Recurring oncology and infusion appointments at the same care centers
+      over extended periods.
+    </div>
+
+    <div class="card">
+      ♿ <strong>Rehabilitation & Therapy</strong><br>
+      Physical, occupational, speech, and pulmonary therapy requiring repeat
+      visits week after week.
+    </div>
+
+    <div class="card">
+      ☢️ <strong>Radiation Therapy</strong><br>
+      Daily treatments over multiple weeks where even small delays can
+      disrupt care schedules.
+    </div>
+
+    <div class="card">
+      🤝 <strong>Substance Use Treatment</strong><br>
+      Outpatient programs that depend on consistent attendance and reliable
+      transportation routines.
+    </div>
+
+    <div class="card">
+      🏥 <strong>Post-Op Rehab</strong><br>
+      Recovery after surgery often involves multiple weekly visits to the
+      same rehabilitation facility.
+    </div>
   </div>
 
   <!-- Senior Assist Image -->
@@ -54,6 +83,64 @@
       alt="Senior receiving assistance entering a vehicle"
     />
   </div>
+</section>
+
+<!-- VALUE MODULE -->
+<section class="value-module">
+  <div class="container value-grid">
+
+    <div>
+      <h2>Why Reliable, Recurring Medical Transportation Matters</h2>
+
+      <p>
+        For many seniors, medical care isn’t occasional. Dialysis, therapy,
+        oncology, and rehabilitation appointments happen multiple times each
+        week, often at the same location, on the same schedule.
+      </p>
+
+      <p>
+        When transportation is unreliable, missed or delayed rides don’t just
+        cause inconvenience. They disrupt care, increase stress, and place
+        added burden on families and caregivers.
+      </p>
+
+      <p>
+        Care Mobility offers a simple, fixed-price transportation option you
+        can count on, without the delays, paperwork, or complexity of
+        insurance, Medicare, or Medicaid transportation programs.
+      </p>
+    </div>
+
+    <div class="value-points">
+      <div class="value-point">
+        <strong>Rideshare isn’t built for routine</strong>
+        Different drivers, variable pickup times, and last-minute
+        cancellations make rideshare unpredictable for recurring medical care.
+      </div>
+
+      <div class="value-point">
+        <strong>Traditional medical transport is complex and impersonal</strong>
+        Long wait windows, shared rides, and insurance approvals prioritize
+        system efficiency over patient comfort and consistency.
+      </div>
+
+      <div class="value-point">
+        <strong>A dependable, private-pay alternative</strong>
+        Care Mobility provides scheduled, reliable transportation at a clear,
+        predictable price — without the administrative burden.
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- SUPPORTIVE IMAGE -->
+<section class="container">
+  <img
+    src="assets/pleasant-ride-conversation.jpg"
+    alt="Care Mobility driver having a pleasant conversation with a senior passenger"
+    style="width:100%; max-width:1000px; display:block; margin:0 auto; border-radius:24px;"
+  />
 </section>
 
 <!-- COMPARISON -->
@@ -118,13 +205,13 @@
     <div>
       <h2>Built Around Showing Up</h2>
       <p>
-        Care Mobility exists because many seniors weren’t struggling with
-        a single ride. They were struggling with the same ride, over and
-        over again.
+        Care Mobility exists because many seniors weren’t struggling with a
+        single ride. They were struggling with the same ride, over and over
+        again.
       </p>
       <p>
-        Familiar drivers and predictable routines make recurring care
-        easier for patients and families.
+        Familiar drivers and predictable routines make recurring care easier
+        for patients and families.
       </p>
     </div>
   </div>
@@ -143,6 +230,7 @@
       <input type="text" name="name" placeholder="Your name" required />
       <input type="email" name="email" placeholder="Email address" required />
       <input type="tel" name="phone" placeholder="Phone number" />
+
       <textarea
         name="message"
         rows="4"
