--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
+<header class="brand-header">
+  <div class="brand-inner">
+    <div class="brand-left">
+      <img
+        src="assets/cm-favicon.png"
+        alt="Care Mobility logo"
+        class="brand-logo"
+      />
+      <div class="brand-text">
+        <div class="brand-name">Care Mobility</div>
+        <div class="brand-tagline">Getting you there every day</div>
+      </div>
+    </div>
+  </div>
+</header>
 <!-- HERO -->
 <section class="hero">
   <div class="container hero-grid">
