--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<!-- BRAND HEADER -->
 <header class="brand-header">
   <div class="brand-inner">
     <div class="brand-left">
