--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Care Mobility</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/cm-favicon.png" type="image/png" />
-
-  <!-- Styles -->
+  <link rel="icon" href="assets/cm-favicon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
 <!-- BRAND HEADER -->
 <header class="brand-header">
   <div class="brand-inner">
@@ -26,14 +24,21 @@
         <div class="brand-tagline">Getting you there every day</div>
       </div>
     </div>
+
+    <div class="brand-right">
+      <a href="tel:16178216429" class="brand-phone">
+        (617) 821-6429
+      </a>
+    </div>
   </div>
 </header>
+
 <!-- HERO -->
 <section class="hero">
   <div class="container hero-grid">
     <div>
       <h1>
-        Reliable transportation<br>
+        Reliable transportation<br />
         for recurring medical care
       </h1>
       <p>
@@ -43,8 +48,8 @@
     </div>
 
     <img
-      src="assets/grandmadialysis.jpg"
-      alt="Senior being transported to a medical appointment"
+      src="assets/pleasant-ride-conversation.jpg"
+      alt="Care Mobility driver having a pleasant conversation with a senior passenger"
     />
   </div>
 </section>
@@ -54,44 +59,14 @@
   <h2>Recurring Medical Transportation, Done Right</h2>
 
   <div class="cards">
-    <div class="card">
-      🩺 <strong>Dialysis</strong><br>
-      Time-sensitive treatments multiple times per week where consistency
-      and punctuality are critical.
-    </div>
-
-    <div class="card">
-      💉 <strong>Cancer & Infusion Therapy</strong><br>
-      Recurring oncology and infusion appointments at the same care centers
-      over extended periods.
-    </div>
-
-    <div class="card">
-      ♿ <strong>Rehabilitation & Therapy</strong><br>
-      Physical, occupational, speech, and pulmonary therapy requiring repeat
-      visits week after week.
-    </div>
-
-    <div class="card">
-      ☢️ <strong>Radiation Therapy</strong><br>
-      Daily treatments over multiple weeks where even small delays can
-      disrupt care schedules.
-    </div>
-
-    <div class="card">
-      🤝 <strong>Substance Use Treatment</strong><br>
-      Outpatient programs that depend on consistent attendance and reliable
-      transportation routines.
-    </div>
-
-    <div class="card">
-      🏥 <strong>Post-Op Rehab</strong><br>
-      Recovery after surgery often involves multiple weekly visits to the
-      same rehabilitation facility.
-    </div>
+    <div class="card">🩺 <strong>Dialysis</strong><br>Time-sensitive treatments multiple times per week.</div>
+    <div class="card">💉 <strong>Cancer & Infusion Therapy</strong><br>Long-term care at the same treatment centers.</div>
+    <div class="card">♿ <strong>Rehabilitation & Therapy</strong><br>Repeat visits week after week.</div>
+    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments where delays matter.</div>
+    <div class="card">🤝 <strong>Substance Use Treatment</strong><br>Outpatient programs dependent on routine.</div>
+    <div class="card">🏥 <strong>Post-Op Rehab</strong><br>Recovery visits to the same facility.</div>
   </div>
 
-  <!-- Senior Assist Image -->
   <div class="services-image">
     <img
       src="assets/senior-assist.jpg"
@@ -103,131 +78,70 @@
 <!-- VALUE MODULE -->
 <section class="value-module">
   <div class="container value-grid">
-
     <div>
-      <h2>Why Reliable, Recurring Medical Transportation Matters</h2>
-
+      <h2>Why Reliable, Recurring Transportation Matters</h2>
       <p>
-        For many seniors, medical care isn’t occasional. Dialysis, therapy,
-        oncology, and rehabilitation appointments happen multiple times each
-        week, often at the same location, on the same schedule.
+        Many seniors don’t need transportation once. They need it
+        multiple times each week, on a predictable schedule.
       </p>
-
       <p>
-        When transportation is unreliable, missed or delayed rides don’t just
-        cause inconvenience. They disrupt care, increase stress, and place
-        added burden on families and caregivers.
+        Missed or delayed rides disrupt care and create stress for
+        patients and families alike.
       </p>
-
       <p>
-        Care Mobility offers a simple, fixed-price transportation option you
-        can count on, without the delays, paperwork, or complexity of
-        insurance, Medicare, or Medicaid transportation programs.
+        Care Mobility offers a simple, fixed-price solution without the
+        paperwork, delays, or complexity of insurance-based transport.
       </p>
     </div>
 
     <div class="value-points">
       <div class="value-point">
         <strong>Rideshare isn’t built for routine</strong>
-        Different drivers, variable pickup times, and last-minute
-        cancellations make rideshare unpredictable for recurring medical care.
+        Different drivers and inconsistent pickups create uncertainty.
       </div>
-
       <div class="value-point">
-        <strong>Traditional medical transport is complex and impersonal</strong>
-        Long wait windows, shared rides, and insurance approvals prioritize
-        system efficiency over patient comfort and consistency.
+        <strong>Traditional medical transport is impersonal</strong>
+        Long wait windows and shared rides prioritize systems over people.
       </div>
-
       <div class="value-point">
-        <strong>A dependable, private-pay alternative</strong>
-        Care Mobility provides scheduled, reliable transportation at a clear,
-        predictable price — without the administrative burden.
+        <strong>A dependable private-pay alternative</strong>
+        Scheduled, reliable rides at a clear, predictable price.
       </div>
     </div>
-
   </div>
-</section>
-
-<!-- SUPPORTIVE IMAGE -->
-<section class="container">
-  <img
-    src="assets/pleasant-ride-conversation.jpg"
-    alt="Care Mobility driver having a pleasant conversation with a senior passenger"
-    style="width:100%; max-width:1000px; display:block; margin:0 auto; border-radius:24px;"
-  />
 </section>
 
 <!-- COMPARISON -->
-<section class="comparison">
-  <div class="container">
-    <h2>How Care Mobility Compares</h2>
+<section class="comparison container">
+  <h2>How Care Mobility Compares</h2>
 
-    <div class="comparison-table">
-      <div class="row header">
-        <div></div>
-        <div>Care Mobility</div>
-        <div>Rideshare<br>(Uber / Lyft)</div>
-        <div>Traditional Medical<br>Transport</div>
-      </div>
-
-      <div class="row">
-        <div>Built for recurring medical care</div>
-        <div class="yes">✓</div>
-        <div class="no">✕</div>
-        <div class="no">✕</div>
-      </div>
-
-      <div class="row">
-        <div>Same driver over time</div>
-        <div class="yes">✓</div>
-        <div class="no">✕</div>
-        <div class="no">✕</div>
-      </div>
-
-      <div class="row">
-        <div>Predictable pickup times</div>
-        <div class="yes">✓</div>
-        <div class="no">✕</div>
-        <div class="no">✕</div>
-      </div>
-
-      <div class="row">
-        <div>Direct, non-shared rides</div>
-        <div class="yes">✓</div>
-        <div class="yes">✓</div>
-        <div class="no">✕</div>
-      </div>
-
-      <div class="row">
-        <div>Patient-first experience</div>
-        <div class="yes">✓</div>
-        <div class="no">✕</div>
-        <div class="no">✕</div>
-      </div>
+  <div class="comparison-table">
+    <div class="row header">
+      <div></div>
+      <div>Care Mobility</div>
+      <div>Rideshare</div>
+      <div>Traditional Medical</div>
     </div>
-  </div>
-</section>
 
-<!-- FOUNDER -->
-<section class="founder">
-  <div class="container founder-grid">
-    <img
-      src="assets/daniel.jpg"
-      alt="Founder of Care Mobility"
-    />
+    <div class="row">
+      <div>Built for recurring care</div>
+      <div class="yes">✓</div>
+      <div class="no">✕</div>
+      <div class="no">✕</div>
+    </div>
 
-    <div>
-      <h2>Built Around Showing Up</h2>
-      <p>
-        Care Mobility exists because many seniors weren’t struggling with a
-        single ride. They were struggling with the same ride, over and over
-        again.
-      </p>
-      <p>
-        Familiar drivers and predictable routines make recurring care easier
-        for patients and families.
-      </p>
+    <div class="row">
+      <div>Same driver over time</div>
+      <div class="yes">✓</div>
+      <div class="no">✕</div>
+      <div class="no">✕</div>
+    </div>
+
+    <div class="row">
+      <div>Predictable pickup times</div>
+      <div class="yes">✓</div>
+      <div class="no">✕</div>
+      <div class="no">✕</div>
     </div>
   </div>
 </section>
@@ -237,28 +151,17 @@
   <div class="container">
     <h2>Request Transportation or Learn More</h2>
 
-    <a class="phone" href="tel:16178216429">(617) 821-6429</a>
-
     <form name="contact" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="contact" />
-
       <input type="text" name="name" placeholder="Your name" required />
       <input type="email" name="email" placeholder="Email address" required />
       <input type="tel" name="phone" placeholder="Phone number" />
-
-      <textarea
-        name="message"
-        rows="4"
-        placeholder="Tell us about the transportation needs"
-        required
-      ></textarea>
-
+      <textarea name="message" rows="4" placeholder="Tell us about the transportation needs" required></textarea>
       <button type="submit">Submit</button>
     </form>
 
     <p class="hipaa-disclaimer">
-      Please do not include medical diagnoses or protected health
-      information (PHI) in this form.
+      Please do not include medical diagnoses or protected health information (PHI).
     </p>
   </div>
 </section>
