--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </div>
 
     <div class="brand-right">
-      <a href="tel:16178216429" class="brand-phone">
-        (617) 821-6429
+      <a href="tel:16178216429" class="brand-contact">(617) 821-6429</a>
+      <a href="mailto:danielshim@gmail.com" class="brand-contact">
+        danielshim@gmail.com
       </a>
     </div>
   </div>
@@ -59,10 +60,10 @@
   <h2>Recurring Medical Transportation, Done Right</h2>
 
   <div class="cards">
-    <div class="card">🩺 <strong>Dialysis</strong><br>Time-sensitive treatments multiple times per week.</div>
+    <div class="card">🩺 <strong>Dialysis</strong><br>Multiple weekly treatments where timing matters.</div>
     <div class="card">💉 <strong>Cancer & Infusion Therapy</strong><br>Long-term care at the same treatment centers.</div>
     <div class="card">♿ <strong>Rehabilitation & Therapy</strong><br>Repeat visits week after week.</div>
-    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments where delays matter.</div>
+    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments where delays disrupt care.</div>
     <div class="card">🤝 <strong>Substance Use Treatment</strong><br>Outpatient programs dependent on routine.</div>
     <div class="card">🏥 <strong>Post-Op Rehab</strong><br>Recovery visits to the same facility.</div>
   </div>
@@ -81,31 +82,33 @@
     <div>
       <h2>Why Reliable, Recurring Transportation Matters</h2>
       <p>
-        Many seniors don’t need transportation once. They need it
-        multiple times each week, on a predictable schedule.
+        Many seniors don’t need transportation once. They need it multiple
+        times each week, often on a fixed schedule.
       </p>
       <p>
-        Missed or delayed rides disrupt care and create stress for
-        patients and families alike.
+        Missed or delayed rides can lead to skipped treatments, increased
+        stress, and unnecessary burden on families and caregivers.
       </p>
       <p>
-        Care Mobility offers a simple, fixed-price solution without the
-        paperwork, delays, or complexity of insurance-based transport.
+        Care Mobility provides a simple, fixed-price option without insurance
+        delays, approvals, or administrative complexity.
       </p>
     </div>
 
     <div class="value-points">
       <div class="value-point">
-        <strong>Rideshare isn’t built for routine</strong>
-        Different drivers and inconsistent pickups create uncertainty.
+        <strong>Rideshare is unpredictable</strong>
+        Pricing fluctuates, drivers change daily, and availability isn’t guaranteed.
       </div>
+
       <div class="value-point">
-        <strong>Traditional medical transport is impersonal</strong>
-        Long wait windows and shared rides prioritize systems over people.
+        <strong>Traditional medical transport is bureaucratic</strong>
+        Paperwork, insurance approvals, and long scheduling windows are common.
       </div>
+
       <div class="value-point">
-        <strong>A dependable private-pay alternative</strong>
-        Scheduled, reliable rides at a clear, predictable price.
+        <strong>Care Mobility is patient-first</strong>
+        Same routines, familiar drivers, and dependable pickup times.
       </div>
     </div>
   </div>
@@ -120,28 +123,66 @@
       <div></div>
       <div>Care Mobility</div>
       <div>Rideshare</div>
-      <div>Traditional Medical</div>
+      <div>Traditional Medical Transport</div>
     </div>
 
     <div class="row">
-      <div>Built for recurring care</div>
+      <div>Built for recurring medical care</div>
       <div class="yes">✓</div>
       <div class="no">✕</div>
       <div class="no">✕</div>
     </div>
 
     <div class="row">
-      <div>Same driver over time</div>
+      <div>Predictable, fixed pricing</div>
+      <div class="yes">✓</div>
+      <div class="no">✕<br><small>Surge pricing</small></div>
+      <div class="no">✕</div>
+    </div>
+
+    <div class="row">
+      <div>Minimal paperwork</div>
+      <div class="yes">✓</div>
+      <div class="yes">✓</div>
+      <div class="no">✕<br><small>Insurance approvals</small></div>
+    </div>
+
+    <div class="row">
+      <div>Same driver & routine</div>
       <div class="yes">✓</div>
       <div class="no">✕</div>
       <div class="no">✕</div>
     </div>
 
     <div class="row">
-      <div>Predictable pickup times</div>
+      <div>Patient-first experience</div>
       <div class="yes">✓</div>
       <div class="no">✕</div>
       <div class="no">✕</div>
+    </div>
+  </div>
+</section>
+
+<!-- FOUNDER / BIO -->
+<section class="founder">
+  <div class="container founder-grid">
+    <img
+      src="assets/daniel.jpg"
+      alt="Daniel Shim, Founder of Care Mobility"
+    />
+
+    <div>
+      <h2>Built Around Showing Up</h2>
+      <p>
+        Care Mobility was created because many seniors weren’t struggling with
+        a single ride — they were struggling with the same ride, over and over
+        again.
+      </p>
+      <p>
+        Dialysis, therapy, oncology, and rehabilitation require consistency.
+        Familiar drivers and predictable routines reduce stress and help
+        patients focus on their health.
+      </p>
     </div>
   </div>
 </section>
