--- a/index.html
+++ b/index.html
@@ -3,209 +3,167 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Care Mobility</title>
+  <title>Care Mobility – Recurring Medical Transportation</title>
 
+  <!-- Favicon -->
   <link rel="icon" href="assets/cm-favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/cm-favicon.png" />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<!-- BRAND HEADER -->
-<header class="brand-header">
-  <div class="brand-inner">
-    <div class="brand-left">
-      <img
-        src="assets/cm-favicon.png"
-        alt="Care Mobility logo"
-        class="brand-logo"
-      />
-      <div class="brand-text">
-        <div class="brand-name">Care Mobility</div>
-        <div class="brand-tagline">Getting you there every day</div>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="brand">
+        <img src="assets/cm-favicon.png" alt="Care Mobility logo" />
+        <div class="brand-text">
+          <strong>Care Mobility</strong>
+          <span>Getting you there every day</span>
+        </div>
+      </div>
+      <div class="header-contact">
+        <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a>
       </div>
     </div>
+  </header>
 
-    <div class="brand-right">
-      <a href="tel:16178216429" class="brand-contact">(617) 821-6429</a>
-      <a href="mailto:danielshim@gmail.com" class="brand-contact">
-        danielshim@gmail.com
-      </a>
-    </div>
-  </div>
-</header>
-
-<!-- HERO -->
-<section class="hero">
-  <div class="container hero-grid">
-    <div>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-copy">
       <h1>
         Reliable transportation<br />
         for recurring medical care
       </h1>
-      <p>
+      <p class="hero-subtitle">
         Consistent, dependable rides for seniors and patients with ongoing
         medical appointments.
       </p>
     </div>
 
-    <img
-      src="assets/pleasant-ride-conversation.jpg"
-      alt="Care Mobility driver having a pleasant conversation with a senior passenger"
-    />
-  </div>
-</section>
+    <div class="hero-image">
+      <img
+        src="assets/pleasant-ride.jpg"
+        alt="Driver providing a calm, friendly ride to a senior patient"
+      />
+    </div>
+  </section>
 
-<!-- SERVICES -->
-<section class="services container">
-  <h2>Recurring Medical Transportation, Done Right</h2>
+  <!-- SERVICES -->
+  <section class="services">
+    <div class="services-header">
+      <h2>Recurring Medical Transportation, Done Right</h2>
 
-  <div class="cards">
-    <div class="card">🩺 <strong>Dialysis</strong><br>Multiple weekly treatments where timing matters.</div>
-    <div class="card">💉 <strong>Cancer & Infusion Therapy</strong><br>Long-term care at the same treatment centers.</div>
-    <div class="card">♿ <strong>Rehabilitation & Therapy</strong><br>Repeat visits week after week.</div>
-    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments where delays disrupt care.</div>
-    <div class="card">🤝 <strong>Substance Use Treatment</strong><br>Outpatient programs dependent on routine.</div>
-    <div class="card">🏥 <strong>Post-Op Rehab</strong><br>Recovery visits to the same facility.</div>
-  </div>
-
-  <div class="services-image">
-    <img
-      src="assets/senior-assist.jpg"
-      alt="Senior receiving assistance entering a vehicle"
-    />
-  </div>
-</section>
-
-<!-- VALUE MODULE -->
-<section class="value-module">
-  <div class="container value-grid">
-    <div>
-      <h2>Why Reliable, Recurring Transportation Matters</h2>
-      <p>
-        Many seniors don’t need transportation once. They need it multiple
-        times each week, often on a fixed schedule.
-      </p>
-      <p>
-        Missed or delayed rides can lead to skipped treatments, increased
-        stress, and unnecessary burden on families and caregivers.
-      </p>
-      <p>
-        Care Mobility provides a simple, fixed-price option without insurance
-        delays, approvals, or administrative complexity.
+      <p class="services-intro">
+        Care Mobility supports a wide range of recurring medical appointments.
+        From dialysis and cancer treatments to rehabilitation, radiation therapy,
+        and post-operative care, we’re built for patients who need the same ride,
+        on the same schedule — week after week.
       </p>
     </div>
 
-    <div class="value-points">
-      <div class="value-point">
-        <strong>Rideshare is unpredictable</strong>
-        Pricing fluctuates, drivers change daily, and availability isn’t guaranteed.
+    <div class="service-cards">
+      <div class="service-card blue">
+        <div class="card-icon">🩺</div>
+        <h3>Dialysis</h3>
+        <p>
+          Multiple weekly treatments where punctual, predictable pickup times
+          are critical.
+        </p>
       </div>
 
-      <div class="value-point">
-        <strong>Traditional medical transport is bureaucratic</strong>
-        Paperwork, insurance approvals, and long scheduling windows are common.
+      <div class="service-card peach">
+        <div class="card-icon">💉</div>
+        <h3>Cancer & Infusion Therapy</h3>
+        <p>
+          Ongoing treatments at the same care centers over extended periods.
+        </p>
       </div>
 
-      <div class="value-point">
-        <strong>Care Mobility is patient-first</strong>
-        Same routines, familiar drivers, and dependable pickup times.
+      <div class="service-card green">
+        <div class="card-icon">♿</div>
+        <h3>Rehabilitation & Therapy</h3>
+        <p>
+          Physical, occupational, speech, and pulmonary therapy requiring
+          repeat visits.
+        </p>
+      </div>
+
+      <div class="service-card blue">
+        <div class="card-icon">☢️</div>
+        <h3>Radiation Therapy</h3>
+        <p>
+          Daily visits over multiple weeks with tightly scheduled treatment windows.
+        </p>
+      </div>
+
+      <div class="service-card peach">
+        <div class="card-icon">🤝</div>
+        <h3>Substance Use Treatment</h3>
+        <p>
+          Outpatient programs dependent on consistent attendance and routine.
+        </p>
+      </div>
+
+      <div class="service-card green">
+        <div class="card-icon">🏥</div>
+        <h3>Post-Op Rehab</h3>
+        <p>
+          Recovery appointments while mobility is limited.
+        </p>
       </div>
     </div>
-  </div>
-</section>
 
-<!-- COMPARISON -->
-<section class="comparison container">
-  <h2>How Care Mobility Compares</h2>
-
-  <div class="comparison-table">
-    <div class="row header">
-      <div></div>
-      <div>Care Mobility</div>
-      <div>Rideshare</div>
-      <div>Traditional Medical Transport</div>
+    <div class="services-image">
+      <img
+        src="assets/senior-assist.jpg"
+        alt="Senior receiving assistance entering a vehicle"
+      />
     </div>
+  </section>
 
-    <div class="row">
-      <div>Built for recurring medical care</div>
-      <div class="yes">✓</div>
-      <div class="no">✕</div>
-      <div class="no">✕</div>
+  <!-- FOUNDER -->
+  <section class="founder-section">
+    <div class="founder-inner">
+      <div class="founder-photo-wrap">
+        <img
+          src="assets/daniel.jpg"
+          alt="Founder of Care Mobility"
+          class="founder-photo"
+        />
+      </div>
+
+      <div class="founder-content">
+        <h2>Built Around Showing Up</h2>
+
+        <p class="founder-lead">
+          Care Mobility exists because many seniors weren’t struggling
+          with a single ride — they were struggling with the same ride,
+          over and over again.
+        </p>
+
+        <p>
+          Dialysis, therapy, oncology, and rehabilitation appointments
+          happen multiple times a week, often at the same clinic, on the
+          same schedule. Care Mobility is built specifically for these
+          recurring trips — with familiar drivers, predictable pickup
+          times, and dependable routines.
+        </p>
+      </div>
     </div>
+  </section>
 
-    <div class="row">
-      <div>Predictable, fixed pricing</div>
-      <div class="yes">✓</div>
-      <div class="no">✕<br><small>Surge pricing</small></div>
-      <div class="no">✕</div>
-    </div>
-
-    <div class="row">
-      <div>Minimal paperwork</div>
-      <div class="yes">✓</div>
-      <div class="yes">✓</div>
-      <div class="no">✕<br><small>Insurance approvals</small></div>
-    </div>
-
-    <div class="row">
-      <div>Same driver & routine</div>
-      <div class="yes">✓</div>
-      <div class="no">✕</div>
-      <div class="no">✕</div>
-    </div>
-
-    <div class="row">
-      <div>Patient-first experience</div>
-      <div class="yes">✓</div>
-      <div class="no">✕</div>
-      <div class="no">✕</div>
-    </div>
-  </div>
-</section>
-
-<!-- FOUNDER / BIO -->
-<section class="founder">
-  <div class="container founder-grid">
-    <img
-      src="assets/daniel.jpg"
-      alt="Daniel Shim, Founder of Care Mobility"
-    />
-
-    <div>
-      <h2>Built Around Showing Up</h2>
-      <p>
-        Care Mobility was created because many seniors weren’t struggling with
-        a single ride — they were struggling with the same ride, over and over
-        again.
-      </p>
-      <p>
-        Dialysis, therapy, oncology, and rehabilitation require consistency.
-        Familiar drivers and predictable routines reduce stress and help
-        patients focus on their health.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- CONTACT -->
-<section class="contact">
-  <div class="container">
-    <h2>Request Transportation or Learn More</h2>
-
-    <form name="contact" method="POST" data-netlify="true">
-      <input type="hidden" name="form-name" value="contact" />
-      <input type="text" name="name" placeholder="Your name" required />
-      <input type="email" name="email" placeholder="Email address" required />
-      <input type="tel" name="phone" placeholder="Phone number" />
-      <textarea name="message" rows="4" placeholder="Tell us about the transportation needs" required></textarea>
-      <button type="submit">Submit</button>
-    </form>
-
-    <p class="hipaa-disclaimer">
-      Please do not include medical diagnoses or protected health information (PHI).
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <img src="assets/cm-favicon.png" alt="Care Mobility logo" />
+    <p>
+      Questions or referrals?
+      <a href="mailto:caremobility247@gmail.com">
+        caremobility247@gmail.com
+      </a>
     </p>
-  </div>
-</section>
+  </footer>
 
 </body>
 </html>
